--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -3,8 +3,7 @@ nixPkgs = ["tor", "curl"]
 
 [phases.install]
 cmds = [
-    "pip install -r requirements.txt",
-    "pip install stem>=1.8.2"
+    "pip install -r requirements.txt"
 ]
 
 [phases.build]
