Feature: Add Redis support for Railway deployment
- Update cache.py to support REDIS_URL environment variable
- Add redis==5.2.2 to API and Scraper requirements
- Auto-detect Railway Redis and connect seamlessly
- Fallback to file-based cache for local development
- Add comprehensive Redis setup guide for Railway

This enables scraper and API services to share cache data
across separate containers, fixing the rejected listings
visibility issue on Railway.

--- a/services/api/requirements.txt
+++ b/services/api/requirements.txt
@@ -18,6 +18,9 @@ websockets==15.0.1
 pyyaml==6.0.2
 python-dotenv==1.0.1
 
+# Caching
+redis==5.2.2
+
 # Error Monitoring
 sentry-sdk[fastapi]==2.19.2
 
